Updated the html

--- a/template/index.html
+++ b/template/index.html
@@ -3,21 +3,24 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Mov(e)ster</title>
+  <title>Giphy</title>
   <link rel="stylesheet" href="./styles/main.css">
-  <link rel="preconnect" href="https://fonts.gstatic.com">
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
 </head>
 <body>
   <div id="app">
-    <header></header>
-    <nav>
-      <a href="#" class="nav-link" data-page="home">Home</a> | 
-      <a href="#" class="nav-link" data-page="categories">Categories</a> |
-      <a href="#" class="nav-link" data-page="favorites">Favorites</a>
-      <input id="search" type="text" placeholder="Search">
-      <a href="#" class="nav-link" data-page="about">About</a>
-    </nav>
+    <header>
+      <nav>
+        <a href="#" class="nav-link" data-page="home">Trends</a> | 
+        <a href="#" class="nav-link" data-page="categories">Favorites</a> |
+        <a href="#" class="nav-link" data-page="favorites">Upload</a>
+        <a href="#" class="nav-link" data-page="about">About</a>
+        <input id="search" type="text" placeholder="Search">
+        <div class="userBox"></div>
+      </nav>
+
+    </header>
+   
+    
     <div id="container">
       <!-- start placeholders -->
       
