--- a/template/styles/main.css
+++ b/template/styles/main.css
@@ -5,40 +5,24 @@ html, body {
 }
 
 body {
-  background: url('../images/dark-linen.png') repeat;
-  font-family: 'Roboto', sans-serif;
-}
-
-div#app {
-  display: grid;
-  max-width: 1400px;
-  margin: 0 auto;
-  grid-template-columns: auto 1fr auto;
-  grid-template-rows: auto auto 1fr auto;
-  grid-template-areas: 
-    'header header header'
-    'menu menu menu'
-    'container container container'
-    'footer footer footer'
-  ;
-  min-height: 100vh;
+  font-family: 'Bebas Neue', sans-serif;
+  background-color: rgb(150, 150, 150);
 }
 
 header {
-  grid-area: header;
-  height: 200px;
-  background: url('../images/banner-top.png');
+  display: flex;
+  justify-content: space-between;
+  background-color: black;
+  height: 80px;
+  margin-bottom: 35px;
 }
 
 nav {
-  grid-area: menu;
-  height: 60px;
-  background: url('../images//banner-bottom.png');
+  margin: 0 30px;
   font-size: 1.75em;
-  line-height: 60px;
-  padding: 20px;
   color: white;
   display: flex;
+  align-items: center;
 }
 
 nav a {
@@ -47,9 +31,18 @@ nav a {
   margin: 0 10px;
 }
 
-.userBox {
-  width: 100px;
-  height: 100px;
+.nav.one {
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  width: 800px;
+
+}
+
+.user-box {
+  border-radius: 5px;
+  width: 60px;
+  height: 60px;
   background-color: white;
   margin-left: 20px;
 }
@@ -59,21 +52,27 @@ nav a:hover {
 }
 
 #container {
-  grid-area: container;
-  background-color: rgba(0, 0, 0, 0.5);
-  padding: 10px;
+  display: flex;
+  justify-content: center;
+  width: 80%;
+  background-color: rgba(0, 0, 0, 0.76);
+  margin: 0 auto;
+  height: 100vh;
+}
+
+.footer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 35px;
+  background-color: black;
+  height: 150px;
   color: white;
 }
 
-footer {
-  grid-area: footer;
-  padding: 10px;
-  text-align: center;
-  color: #ccc;
-}
-
-.hidden {
-  display: none;
+.footer > h2 {
+  font-size: 50px;
+  color: aqua;
 }
 
 a.active {
@@ -82,31 +81,13 @@ a.active {
 }
 
 input#search {
-  font-size: 20px;
+  font-size: 18px;
+  width: 200px;
   background-color: rgba(0, 0, 0, 0.8);
   color: white;
-  border: 1px solid gray;
+  border: 1px solid rgb(255, 255, 255);
   border-radius: 4px;
-  height: 24px;
-  flex: 1 0;
-  margin: auto;
+  margin-left: 15px;
+  height: 22px;
+  flex-grow: 1;
 }
-
-span.favorite {
-  padding-left: 10px;
-  cursor: pointer;
-}
-
-span.favorite.active {
-  color: rgb(255, 0, 149);
-}
-
-span.favorite:hover {
-  color:rgb(187, 135, 255)
-}
-
-/* End template styling */
-
-
-
-/* Add your styles below */
