Search and Detailed working

--- a/template/index.html
+++ b/template/index.html
@@ -13,7 +13,8 @@
       <a href="#" class="nav-link" data-page="favorites">Favorites</a>
       <a href="#" class="nav-link" data-page="upload">Upload</a>
       <a href="#" class="nav-link" data-page="about">About</a>
-      <input id="search" type="text" placeholder="Search Giphs...">
+      <input id="search-input" type="text" placeholder="Search Giphs...">
+      <button id="search-btn"> Search</button>
     </nav>
 
     <nav class="nav two">
