--- a/template/styles/main.css
+++ b/template/styles/main.css
@@ -36,7 +36,22 @@ nav a {
   display: flex;
   justify-content: center;
   width: 800px;
+}
 
+#search-btn {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-family: 'Bebas Neue', sans-serif;
+  font-size: 18px;
+  margin-left: 10px;
+  height: 27px;
+  padding: 10px 10px 10px 10px;
+  border: none;
+  background-color: rgb(95, 191, 255);
+  color: white;
+  border-radius: 4px;
+  cursor: pointer;
 }
 
 .user-box {
@@ -53,11 +68,13 @@ nav a:hover {
 
 #container {
   display: flex;
+  flex-direction: column;
   justify-content: center;
+  align-items: center;
   width: 80%;
   background-color: #202020;
   margin: 0 auto;
-  min-height: 90vh;
+  min-height: 70vh;
 }
 
 .footer {
@@ -80,14 +97,15 @@ a.active {
   font-weight: bold;
 }
 
-input#search {
+#search-input {
+  font-family: 'Bebas Neue', sans-serif;
   font-size: 18px;
   width: 200px;
   background-color: rgba(0, 0, 0, 0.8);
   color: white;
   border: 1px solid rgb(255, 255, 255);
   border-radius: 4px;
-  margin-left: 15px;
+  margin-left: 10px;
   height: 22px;
   flex-grow: 1;
 }
@@ -106,4 +124,75 @@ input#search {
 
 #trending div {
   margin-bottom: 10px;
+  cursor: pointer;
 }
+
+
+/* Search Styling */
+
+#search-content{
+  display: block;
+  columns: 4;
+  column-gap: 10px;
+}
+
+.search-heading {
+  color: white;
+  size: 2rem;
+}
+
+#search-content p {
+  color: white;
+  font-size: 100px;
+  white-space: nowrap;      
+}
+
+#search-content img {
+  width: 100%;
+}
+
+#search-content div {
+  margin-bottom: 10px;
+}
+
+/* Detailed Styling */
+
+#detailed {
+  margin: 0 auto;
+  width: 80%;
+  height: 100%;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  color: white;
+}
+
+.detailed-info {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+  gap: 15px;
+}
+
+.detailed-info > h1,h3,p{
+  margin: 0 20px 0 0;
+  font-size: 2rem;
+}
+
+.user-avatar {
+  margin: 20px 20px;
+}
+
+#detailed .detailed-gif img{
+  max-width: 100%;
+  max-height: 100%;
+  width: 450px;
+  height: auto;
+}
+
+.user-avatar img {
+  max-width: 100%;
+  max-height: 100%;
+  width: 200px;
+  height: auto;
+}
+
