--- a/template/styles/main.css
+++ b/template/styles/main.css
@@ -220,3 +220,110 @@ display: inline-flex;
   height: auto;
 }
 
+
+/* About Page styling */
+
+.about-content {
+  width: 1400px;
+  height: 800px;
+  background-color: black;
+  color: white;
+  font-size: 1.8rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.about-content h1,h2,h3{
+  margin: 15px 0 0 0;
+}
+
+.about-content ul {
+  margin: 0;
+}
+
+
+/* Profile Styling */
+
+#profile {
+  display: grid;
+  grid-template-rows: 1fr 1fr;
+  gap: 20px;
+  background-color: black;
+  color: white;
+  padding: 40px;
+}
+
+.user-info {
+  display: grid;
+  grid-template-columns: 1fr 2fr;
+  gap: 20px
+}
+
+.about-user{
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+  border-left: 3px solid white;
+}
+
+.user-data {
+  flex-grow: 1;
+  display: flex;
+  align-items: flex-end;
+  flex-direction: column;
+  justify-content: flex-end;
+}
+
+.about-user h1 {
+  font-size: 3rem;
+  margin: 0 0 10px 0;
+}
+
+.user-data h3 {
+  font-size: 2rem;
+  margin: 30px 0 10px 0;
+}
+
+.user-data h4 {
+  font-size: 1.5rem;
+  margin: 0 0 10px 0;
+}
+
+.uploaded-gird{
+  margin-top: 20px;
+  display: block;
+  columns: 4;
+  column-gap: 10px;
+}
+
+hr {
+  background-color: white;
+  color: white;
+  height: 1px;
+}
+
+.uploaded-gifs {
+  text-align: center;
+}
+
+.uploaded-gifs h2 {
+  color: white;
+  size: 2rem;
+}
+
+.uploaded-gird p {
+  color: white;
+  font-size: 100px;
+  white-space: nowrap;      
+}
+
+.uploaded-gird img {
+  width: 100%;
+}
+
+.uploaded-gird div {
+  margin-bottom: 10px;
+}
+
