--- a/template/styles/main.css
+++ b/template/styles/main.css
@@ -48,7 +48,7 @@ nav a {
   height: 27px;
   padding: 10px 10px 10px 10px;
   border: none;
-  background-color: rgb(95, 191, 255);
+  background-color: #5fbfff;
   color: white;
   border-radius: 4px;
   cursor: pointer;
@@ -63,7 +63,15 @@ nav a {
 }
 
 nav a:hover {
-  color: rgb(198, 115, 247);
+  color: #4b98cc;
+}
+
+#search-btn:hover {
+  background-color: #4b98cc
+}
+
+#search-btn:active {
+  background-color: #0099ff
 }
 
 #container {
@@ -141,18 +149,24 @@ a.active {
   size: 2rem;
 }
 
-#search-content p {
-  color: white;
-  font-size: 100px;
-  white-space: nowrap;      
-}
-
 #search-content img {
   width: 100%;
 }
 
 #search-content div {
   margin-bottom: 10px;
+}
+
+#search-empty {
+  display: flex;
+  justify-content: center;
+}
+
+#search-empty p {
+  display: inline-block;
+  color: white;
+  font-size: 3.9rem;
+  white-space: nowrap;   
 }
 
 /* Detailed Styling */
@@ -224,15 +238,17 @@ display: inline-flex;
 /* About Page styling */
 
 .about-content {
-  width: 1400px;
-  height: 800px;
+  width: 1522px;
+  height: 100%;
   background-color: black;
+  padding: 100px 0;
   color: white;
   font-size: 1.8rem;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  border-radius: 8px;
 }
 
 .about-content h1,h2,h3{
@@ -244,6 +260,69 @@ display: inline-flex;
 }
 
 
+/* Upload Styling */
+
+#uploaded {
+  background-color: black;
+  color: white;
+  width: 100%;
+  height: 100% ;
+  padding: 100px 0;
+  text-align: center;
+  border-radius: 8px;
+}
+
+.form {
+  background-color: #5fbfff;
+  max-width: 800px;
+  margin: 20px auto;
+  padding: 20px;
+  border-radius: 8px;
+}
+
+.upload-button {
+  background-color: #ffffff;
+  color: #5fbfff;
+  border: none;
+  padding: 10px 20px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 18px;
+  cursor: pointer;
+  margin-top: 10px;
+  border-radius: 4px;
+  font-family: 'Bebas Neue', sans-serif;
+}
+.upload-button:hover {
+  background-color: #ececec;
+}
+
+input[type=file] {
+  padding: 10px;
+  margin: 10px 0;
+  display: block;
+  width: calc(100% - 20px);
+  border: 2px solid #ffffff;
+  font-size: 16px;
+  border-radius: 8px;
+}
+
+input[type=file]::file-selector-button {
+  background-color: #ffffff;
+  color: #5fbfff;
+  border: none;
+  padding: 10px 20px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  cursor: pointer;
+  border-radius: 4px;
+  margin: 0 10px;
+  font-family: 'Bebas Neue', sans-serif;
+}
+
 /* Profile Styling */
 
 #profile {
@@ -253,6 +332,7 @@ display: inline-flex;
   background-color: black;
   color: white;
   padding: 40px;
+  border-radius: 8px;
 }
 
 .user-info {
@@ -315,7 +395,7 @@ hr {
 
 .uploaded-gird p {
   color: white;
-  font-size: 100px;
+  font-size: 3.9rem;
   white-space: nowrap;      
 }
 
