--- a/template/styles/main.css
+++ b/template/styles/main.css
@@ -151,6 +151,7 @@ a.active {
 
 #search-content img {
   width: 100%;
+  cursor: pointer;
 }
 
 #search-content div {
@@ -209,6 +210,7 @@ a.active {
 .user-avatar {
   text-align: center;
   margin: 20px 20px 0 0;
+  
 }
 
 .user-avatar > h3{
@@ -232,6 +234,7 @@ display: inline-flex;
   max-height: 100%;
   width: 150px;
   height: auto;
+  border-radius: 4px;
 }
 
 
