Small changes on nav menu

--- a/template/index.html
+++ b/template/index.html
@@ -21,7 +21,9 @@
 
     <nav class="nav two">
       <a href="#" class="nav-link" data-page="profile">Profile</a>
-      <div class="user-box"></div>
+      <div class="user-box">
+        <img src="https://fiverr-res.cloudinary.com/images/t_main1,q_auto,f_auto,q_auto,f_auto/gigs/118947646/original/9fb85fe56953295c5592270439d44b477c742ca5/create-a-pixel-art-charakter-for-you.png" alt="profile-picture">
+      </div>
     </nav>
   </header>
 
