--- a/template/index.html
+++ b/template/index.html
@@ -37,7 +37,7 @@
 
     <footer>
       <div class="footer">
-        <h2>Web Project 1 - Team 2</h2>
+        <h2>&copy; 2024 Giphy application - Team 2. All rights reserved.</h2>
       </div>
     </footer>
 
