--- a/template/index.html
+++ b/template/index.html
@@ -3,11 +3,13 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Giphy</title>
+  <title>GIF Hub</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="./styles/main.css">
+  
+  <link rel="icon" type="image/x-icon" href="./img/favicon.ico">
 </head>
 <body>
   <header>
@@ -37,7 +39,7 @@
 
     <footer>
       <div class="footer">
-        <h2>&copy; 2024 Giphy application - Team 2. All rights reserved.</h2>
+        <h2>&copy; 2024 GIF Hub application - Team 2. All rights reserved.</h2>
       </div>
     </footer>
 
